Adjust jmrix and tests for silent Add New Item entry validation (below Error level) log using variables Add Bundle for dcc4pc and Powerline i18n error dialogs add validHwAddress to XNet turnout

--- a/java/src/jmri/jmrix/powerline/SystemBundle_da.properties
+++ b/java/src/jmri/jmrix/powerline/SystemBundle_da.properties
@@ -1,12 +1,10 @@
-# powerline/SystemBundle.properties
-#
-#
+# powerline/SystemBundle_da.properties
 #
 # From an earlier version by Bob Jacobsen, Copyright (C) 2008
 #
-# Default properties for the jmri.jmrix.powerline menu
+# Danish properties for the jmri.jmrix.powerline menu
 
-MenuSystem    = Powerline
+MenuSystem                  = Powerline
 
 MenuItemCommandMonitor      = Communications Monitor
 MenuItemSendCommand         = Send Command
