--- a/java/src/jmri/jmrix/powerline/SystemBundle_de.properties
+++ b/java/src/jmri/jmrix/powerline/SystemBundle_de.properties
@@ -1,10 +1,9 @@
-# powerline/SystemBundle.properties
-#
+# powerline/SystemBundle_de.properties
 #
 # from earlier version by Simon Ginsburg Copyright (C) 2008
 # German properties for the jmri.jmrix.powerline menu
 
-MenuSystem    = Powerline
+MenuSystem                  = Powerline
 
 MenuItemCommandMonitor      = Datenverkehr Monitor
 MenuItemSendCommand         = Sende Befehl
