--- a/java/src/jmri/jmrix/powerline/SystemBundle_ja_JP.properties
+++ b/java/src/jmri/jmrix/powerline/SystemBundle_ja_JP.properties
@@ -1,12 +1,10 @@
-# powerline/SystemBundle.properties
-#
-#
+# powerline/SystemBundle_ja_JP.properties
 #
 # From an earlier version by Bob Jacobsen, Copyright (C) 2008
 #
-# Default properties for the jmri.jmrix.powerline menu
+# Japanese properties for the jmri.jmrix.powerline menu
 
-MenuSystem    = Powerline
+MenuSystem                  = Powerline
 
 MenuItemCommandMonitor      = Communications Monitor
 MenuItemSendCommand         = Send Command
