--- a/java/src/jmri/util/swing/UtilBundle_ca.properties
+++ b/java/src/jmri/util/swing/UtilBundle_ca.properties
@@ -4,3 +4,23 @@
 # Translation: Joan de Castro
 
 FontSymbol = (symbol)
+
+# interface colors
+# these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
+Color=Color
+Black = Negre
+DarkGray = Gris Fosc
+Gray = Gris
+LightGray = Gris Clar
+White = Blanc
+Red = Vermell
+Pink = Rosa
+Orange = Taronja
+Yellow = Groc
+Green = Verd
+Blue = Blau
+Magenta = Magenta
+Cyan = Cyan
+ColorClear = Transparent
+None = Cap
+
