--- a/java/src/jmri/util/swing/UtilBundle_de.properties
+++ b/java/src/jmri/util/swing/UtilBundle_de.properties
@@ -5,3 +5,23 @@
 FontSymbol=(Symbol)
 # used in BeanSelectCreate pane, copy from beantableBundle key "HardwareAddressToolTip"
 EnterHWaddressAsIntTooltip = Gebe eine Ganzzahl ein als Hardware Adresse f\u00fcr das neues Objekt, z.B. 13
+
+# interface colors
+# these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
+Color=Farbe
+Black=Schwarz
+DarkGray=Dunkelgrau
+Gray=Grau
+LightGray=Hellgrau
+White=Wei\u00df
+Red=Rot
+Pink=Rosarot
+Orange=Orange
+Yellow=Gelb
+Green=Gr\u00fcn
+Blue=Blau
+Magenta=Magentarot
+Cyan=Cyanblau
+ColorClear = Tranzparent
+None=Keine
+
