Improve connections error wording (it's not about the multiple system connections, but 2+ errors

--- a/java/src/jmri/jmrix/JmrixBundle_ca.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_ca.properties
@@ -114,7 +114,7 @@ ErrorInvalidValueInGUI = <html><font color\="\#FF0000">Invalid <b>{0}</b> </html
 # Startup Exceptions
 # Error creating single connection {0} - UserName, {1} - SystemName
 ErrorSingleConnection = Impossible crear la connexi\u00f3 "{0}" ({1}).
-# Multiple connections error
+# Multiple connection errors
 ErrorMultipleConnections = Impossible crear m\u00faltiples connexions.
 #error message displayed when serial port not found while loading config
 SerialPortNotFound=Serial port {0} not found.
