--- a/java/src/jmri/jmrix/JmrixBundle_cs.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_cs.properties
@@ -115,7 +115,7 @@ ErrorInvalidValueInGUI = <html><font color\="\#FF0000">Neplatn\u00fd <b>{0}</b> 
 # Startup Exceptions
 # Error creating single connection {0} - UserName, {1} - SystemName
 ErrorSingleConnection = Nemohu vytvo\u0159it p\u0159ipojen\u00ed "{0}" ({1}).
-# Multiple connections error
+# Multiple connection errors
 ErrorMultipleConnections = Nemohu vytvo\u0159it v\u00edcen\u00e1sobn\u00e9 p\u0159ipojen\u00ed.
 #error message displayed when serial port not found while loading config
 SerialPortNotFound=Serial port {0} not found.
