--- a/java/src/jmri/jmrix/JmrixBundle_da.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_da.properties
@@ -157,7 +157,7 @@ ErrorInvalidValueInGUI  = <html><font color\="\#FF0000">Invalid <b>{0}</b> </htm
 # Startup Exceptions
 # Error creating single connection {0} - UserName, {1} - SystemName
 ErrorSingleConnection   = Kunne ikke oprette forbindelse \"{0}\" ({1}).
-# Multiple connections error
+# Multiple connection errors
 ErrorMultipleConnections = Kunne ikke oprette flere forbindelser.
 #error message displayed when serial port not found while loading config
 SerialPortNotFound      = Serial port {0} ikke fundet.
