--- a/java/src/jmri/jmrix/JmrixBundle_nl.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_nl.properties
@@ -158,8 +158,8 @@ ErrorInvalidValueInGUI  = <html><font color\="\#ff0000">Ongeldige <b>{0}</b> </h
 # Startup Exceptions
 # Error creating single connection {0} - UserName, {1} - SystemName
 ErrorSingleConnection   = Kan connectie "{0}" ({1}) niet maken.
-# Multiple connections error
-ErrorMultipleConnections = Kan niet meerdere connecties maken.
+# Multiple connection errors
+ErrorMultipleConnections = Kan een aantal connecties niet maken.
 #error message displayed when serial port not found while loading config
 SerialPortNotFound      = Seri\u00eble poort {0} niet gevonden.
 #Message displayed when serial port is present but locked by other program
