use Bundle for systemsmenu string, move key from all JmrixSystemsBundles, delete unused key

--- a/java/src/jmri/jmrix/JmrixBundle_de.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_de.properties
@@ -3,6 +3,10 @@
 # by Simon Ginsburg und Egbert Broerse
 # German properties for the jmri.jmrix classes
 
+# menu
+MenuSystems             = Digitalsysteme
+
+# network adapters preferences
 noneSelected            = (keine ausgew\u00e4hlt)
 noPortsFound            = (keine Schnittstelle gefunden!)
 none                    = (keine)
