--- a/java/src/jmri/jmrix/JmrixBundle_fr.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_fr.properties
@@ -3,11 +3,15 @@
 # Default properties for the jmri.jmrix classes
 # translated by Herv\u00e9 BLOREC <bzh56420@yahoo.fr> on 2016-06-09
 
+# menu
+MenuSystems             = Syst\u00e9mes
+
+# network adapters preferences
 noneSelected            = (non s\u00e9lectionn\u00e9)
 noPortsFound            = (ports non trouv\u00e9s!)
 none                    = (rien)
 
-HostFieldLabel                  = Adresse IP/Nom d'H\u00d4te: 
+HostFieldLabel                  = Adresse IP/Nom d'H\u00f4te: 
 HostFieldToolTip                = Adresse IP pour une configuration manuelle compl\u00e8te. Nom d'h\u00d4te facultatif pour la configuration de ZeroConf/mDNS. 
 PortFieldLabel                  = Port TCP/UDP : 
 PortFieldToolTip                = R\u00e9glage de l'adresse du port pour la connexion TCP
