--- a/java/src/jmri/jmrix/JmrixBundle_ca.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_ca.properties
@@ -2,6 +2,10 @@
 # Traducci\u00f3 al Catal\u00e0: Joan de Castro Alemany [Joan276dca@yahoo.es] 06/11/2016
 # Catalan properties for the jmri.jmrix classes
 
+# menu
+MenuSystems             = Sistema
+
+# network adapters preferences
 noneSelected            = (Cap selecci\u00f3)
 noPortsFound            = (no s'han trobat ports!)
 none                    = (cap)
@@ -34,7 +38,7 @@ TooltipClearMonHistory  = Neteja l'historial de monitoratge
 TooltipStopScroll       = Para l'scroll de pantalla
 TooltipAddMessage       = Afegeix un missatge de text al registe
 TooltipMonTextPane      = L'ordre i la informaci\u00f3 de monitoratge apareixen aqu\u00ed
-TooltipEntryPane=Entra text aqu\u00ed, despr\u00e9s prem [{0}] per incloure-ho al registre
+TooltipEntryPane        = Entra text aqu\u00ed, despr\u00e9s prem [{0}] per incloure-ho al registre
 TooltipFilter           = Entra el valor de bytes a ocultar, separats per espais
 TooltipStartLogging     = Inicia el registre a un fitxer
 TooltipStopLogging      = Para el registre a un fitxer
