--- a/java/src/jmri/jmrix/JmrixBundle_cs.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_cs.properties
@@ -3,6 +3,10 @@
 # Translation:  Petr Sidlo
 # Czech properties for the jmri.jmrix classes
 
+# menu
+MenuSystems             = Syst\u00e9my
+
+# network adapters preferences
 noneSelected            = (nic vybr\u00e1no)
 noPortsFound            = (nenalezen \u017e\u00e1dn\u00fd port!)
 none                    = (nic)
@@ -35,7 +39,7 @@ TooltipClearMonHistory  = Smazat historii monitorov\u00e1n\u00ed
 TooltipStopScroll       = Zastavit rolov\u00e1n\u00ed obrazovky
 TooltipAddMessage       = P\u0159idat textovou zpr\u00e1vu do logu
 TooltipMonTextPane      = Informace monitovovan\u00e9ho p\u0159\u00edkazu a odpov\u011bdi se zobraz\u00ed zde
-TooltipEntryPane=Zadejte text zde, potom klikem na tla\u010d\u00edtko [{0}] za\u010dle\u0148te do logu
+TooltipEntryPane        = Zadejte text zde, potom klikem na tla\u010d\u00edtko [{0}] za\u010dle\u0148te do logu
 TooltipFilter           = Zadejte hodnoty byt\u016f, kter\u00e9 maj\u00ed b\u00fdt skryty, odd\u011blen\u00e9 mezerami
 TooltipStartLogging     = Start logov\u00e1n\u00ed do souboru
 TooltipStopLogging      = Stop logov\u00e1n\u00ed do souboru
