--- a/java/src/jmri/jmrix/JmrixBundle_da.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_da.properties
@@ -2,6 +2,10 @@
 # Danish translation by Sonny Hansen
 # Danish properties for the jmri.jmrix classes
 
+# menu
+MenuSystems             = Systemer
+
+# network adapters preferences
 noneSelected            = (ingen valgte)
 noPortsFound            = (ingen porte fundet!)
 none                    = (ingen)
