--- a/java/src/jmri/jmrix/JmrixBundle_nl.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_nl.properties
@@ -2,6 +2,10 @@
 #
 # Dutch properties for the jmri.jmrix classes
 
+# menu
+MenuSystems             = Systemen
+
+# network adapters preferences
 noneSelected            = (geen selectie)
 noPortsFound            = (geen poorten gevonden!)
 none                    = (geen)
