call menus with null parameter Dutch EasyDcc translation update todo

--- a/java/src/jmri/jmrix/JmrixBundle_nl.properties
+++ b/java/src/jmri/jmrix/JmrixBundle_nl.properties
@@ -21,7 +21,7 @@ ServiceTypeFieldLabel   = Naam van servicetype:
 ServiceTypeFieldToolTip = ZeroConf/mDNS servicetype.
 
 # AbstractMonFrame
-MonitorXTitle           = {0} Gegevensmonitor
+MonitorXTitle           = {0}-monitor
 ButtonClearScreen       = Maak scherm leeg
 ButtonFreezeScreen      = Bevries scherm
 ButtonAddMessage        = Voeg toe aan Log
