move properties needed for testing to a common level

--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_de.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_de.properties
@@ -88,3 +88,5 @@ PM              = nm
 Up              = Nach Oben
 Down            = Nach Unten
 Status=Zustand
+
+TitleRouteEdit=Bearbeite Strecke
