--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_en_GB.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_en_GB.properties
@@ -17,3 +17,12 @@ RailroadName        = Railway Name
 # Cardinal directions - overrule US english terms
 North               = Up
 South               = Down
+
+
+#carTypeNames, carTypeConvert, and carTypeARR were originally defined in 
+#the properties for jmri.jmrit.operations.rollingstock.cars, but in order 
+#to internationalize tests, they need to be referenced in other packages.
+carTypeNames        = Brake van,Coach,Conflat,Flat wagon,Lorry,Lowmac,Open wagon,Tipper,Well wagon,Van
+road                = railway
+# The carTypeConvert must be kept in sync with carTypeNames, each lime must have the same number of elements.
+# carTypeConvert is used to convert from descriptive name to AAR codes, so there's a one to one mapping, i.e. Boxcar = XM, etc.
