--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_ja_JP.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_ja_JP.properties
@@ -69,3 +69,13 @@ Down            = \u4e0b
 
 Pickup          = \u3064\u307e\u3080
 Status          = \u30b9\u30c6\u30a4\u30bf\u30b9
+
+
+#carTypeNames, carTypeConvert, and carTypeARR were originally defined in 
+#the properties for jmri.jmrit.operations.rollingstock.cars, but in order 
+#to internationalize tests, they need to be referenced in other packages.
+carTypeNames        = Baggage,Boxcar,Caboose,Coal,Coilcar,FlatBulkHead,FlatBHPaper,FlatBHWood,FlatTimber,FlatTrailer,FlatWood,Flatcar,Gon-scrap,Gondola,HopChem,HopCmnt,HopCoal,HopCoal-Ety,HopGrain,HopSand,Hopper,MOW,MOWBox,Passenger,ReefMech,Reefer,ReeferIce,Stock,Tank Food,Tank Gas,Tank Kero,Tank Oil,Tank Veg
+
+carTypeARR          = BR,CA,CS,DA,DB,DL,FA,FB,FC,FCA,FD,FL,FM,FW,GA,GB,GD,GH,GS,GT,GW,HFA,HK,HM,HT,HTA,LC,LF,LG,LM,LO,LP,LS,LU,MA,MB,MWC,MMA,NE,PA,PAS,PC,PL,PO,PS,PT,PV,RA,RB,RP,RS,SA,SC,SM,ST,T,TA,TG,THI,TL,TM,TMU,TP,TPA,TRGA,TVI,TW,XC,XF,XL,XM,XP,XT
+
+TitleRouteEdit  = \u30eb\u30fc\u30c8\u3092\u7de8\u96c6
