more work towards internationalization of oeprations tests

--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_de.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_de.properties
@@ -89,4 +89,7 @@ Up              = Nach Oben
 Down            = Nach Unten
 Status=Zustand
 
+engineDefaultTypes  = Elektrisch,Motor,Diesel,Gasturbine,Dampf,Dampf-licht,Dampf-schwer,Dampf-pers,Dampf-gem,Rangierlok
+engineDefaultType   = Motor
+
 TitleRouteEdit=Bearbeite Strecke
