--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_ja_JP.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_ja_JP.properties
@@ -78,4 +78,7 @@ carTypeNames        = Baggage,Boxcar,Caboose,Coal,Coilcar,FlatBulkHead,FlatBHPap
 
 carTypeARR          = BR,CA,CS,DA,DB,DL,FA,FB,FC,FCA,FD,FL,FM,FW,GA,GB,GD,GH,GS,GT,GW,HFA,HK,HM,HT,HTA,LC,LF,LG,LM,LO,LP,LS,LU,MA,MB,MWC,MMA,NE,PA,PAS,PC,PL,PO,PS,PT,PV,RA,RB,RP,RS,SA,SC,SM,ST,T,TA,TG,THI,TL,TM,TMU,TP,TPA,TRGA,TVI,TW,XC,XF,XL,XM,XP,XT
 
+engineDefaultTypes  = \u96fb\u6c17,\u30ac\u30bd\u30ea\u30f3,\u30c7\u30a3\u30fc\u30bc\u30eb,\u30ac\u30b9\u30bf\u30fc\u30d3\u30f3,\u84b8\u6c17
+engineDefaultType   = \u6a5f\u95a2\u8eca
+
 TitleRouteEdit  = \u30eb\u30fc\u30c8\u3092\u7de8\u96c6
