--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_ca.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_ca.properties
@@ -94,3 +94,6 @@ carTypeNames        = Baggage,Boxcar,Caboose,Coal,Coilcar,FlatBulkHead,FlatBHPap
 carTypeConvert      = BE,XM,NE,HT,FD-coil,FB,FB-paper,FB-wood,FL,FC,FM-wood,FM,GB-scrap,GA,HMR-chem,HMR-cmnt,HF-coal,HF-coalEty,HMR-grain,HMR-sand,HT,MWB,MWT,PA,RP,RB,RS,SA,TG,TM-gas,TM-kero,TM-oil,TG-veg
 
 carTypeARR          = BE,BR,CA,CS,DA,DB,DL,FA,FB,FC,FCA,FD,FL,FM,FW,GA,GB,GD,GH,GS,GT,GW,HFA,HK,HM,HMR,HT,HTA,LC,LF,LG,LM,LO,LP,LS,LU,MA,MB,MWB,MWC,MWT,MMA,NE,PA,PAS,PC,PL,PO,PS,PT,PV,RA,RB,RP,RS,SA,SC,SM,ST,T,TA,TG,THI,TL,TM,TMU,TP,TPA,TRGA,TVI,TW,XC,XF,XL,XM,XP,XT
+
+engineDefaultTypes  = Electric,Engine,Diesel,Gas Turbine,Steam,Steam-light,Steam-heavy,Steam-pass,Steam-mixed,Switcher
+engineDefaultType   = Engine
