--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_da.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_da.properties
@@ -102,6 +102,9 @@ carTypeConvert      = BE,XM,NE,HT,FD-coil,FB,FB-paper,FB-wood,FL,FC,FM-wood,FM,G
 
 carTypeARR          = BE,BR,CA,CS,DA,DB,DL,FA,FB,FC,FCA,FD,FL,FM,FW,GA,GB,GD,GH,GS,GT,GW,HFA,HK,HM,HMR,HT,HTA,LC,LF,LG,LM,LO,LP,LS,LU,MA,MB,MWB,MWC,MWT,MMA,NE,PA,PAS,PC,PL,PO,PS,PT,PV,RA,RB,RP,RS,SA,SC,SM,ST,T,TA,TG,THI,TL,TM,TMU,TP,TPA,TRGA,TVI,TW,XC,XF,XL,XM,XP,XT
 
+engineDefaultTypes  = Electric,Engine,Diesel,Gas Turbine,Steam,Steam-light,Steam-heavy,Steam-pass,Steam-mixed,Switcher
+engineDefaultType   = Engine
+
 #This was moved from the property file in jmri.jmrit.operations.routes for 
 #testing purposes.
 TitleRouteEdit      = Rediger Rute
