--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_it.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_it.properties
@@ -102,5 +102,7 @@ carTypeConvert = BE,XM,NE,HT,FD-coil,FB,FB-paper,FB-wood,FL,FC,FM-wood,FM,GB-scr
 
 carTypeARR = BE,BR,CA,CS,DA,DB,DL,FA,FB,FC,FCA,FD,FL,FM,FW,GA,GB,GD,GH,GS,GT,GW,HFA,HK,HM,HT,HTA,LC,LF,LG,LM,LO,LP,LS,LU,MA,MB,MWB,MWC,MWT,MMA,NE,PA,PAS,PC,PL,PO,PS,PT,PV,RA,RB,RP,RS,SA,SC,SM,ST,T,TA,TG,THI,TL,TM,TMU,TP,TPA,TRGA,TVI,TW,XC,XF,XL,XM,XP,XT
 
+engineDefaultTypes = Elettrica,Loco,Diesel,Turbina Gas,Vapore,Vapore-leggero,Vapore-pesante,Vapore-passeggeri,Vapore-misto,Manovra
+engineDefaultType = Loco
 
 TitleRouteEdit      = Modifica Itinerario
