MastBuilder i18n (just for fun, not in any menu, no code behind gui) move some keys to jmrit.Bundle Fix non-ascii code comments in LE

--- a/java/src/jmri/jmrit/Bundle_ca.properties
+++ b/java/src/jmri/jmrit/Bundle_ca.properties
@@ -154,6 +154,7 @@ IndicatorTO     = Indicador d'Agulla
 Length          = Longitud
 Name            = Nom
 
+SigSys = Sistema de Senyals
 # interface colors
 # these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
 Color=Color
