--- a/java/src/jmri/jmrit/Bundle_cs.properties
+++ b/java/src/jmri/jmrit/Bundle_cs.properties
@@ -160,6 +160,7 @@ StateIdle = ne\u010dinn\u00fd
 
 Name = N\u00e1zev
 
+SigSys          = N\u00e1v\u011bstn\u00ed syst\u00e9m
 # interface colors
 # these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
 Color           = Barva
