--- a/java/src/jmri/jmrit/Bundle_it.properties
+++ b/java/src/jmri/jmrit/Bundle_it.properties
@@ -154,9 +154,10 @@ Options     = Opzioni
 SelectAll   = Seleziona tutti
 ClearAll    = Cancella tutti
 
+SigSys = Sistema Segnale
 # interface colors
-Color=Colore
 # these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
+Color = Colore
 Black = Nero
 DarkGray = Grigio scuro
 Gray = Grigio
