--- a/java/src/jmri/jmrit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/Bundle_nl.properties
@@ -181,6 +181,7 @@ center          = Midden
 Name            = Naam
 Length          = Lengte
 
+SigSys          = Seinsysteem
 # interface colors
 # these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
 Color           = Kleur
