--- a/java/src/jmri/jmrit/Bundle_da.properties
+++ b/java/src/jmri/jmrit/Bundle_da.properties
@@ -184,6 +184,7 @@ center          = Center
 Name            = Navn
 Length          = L\u00e6ngde
 
+SigSys          = Signal System
 # interface colors
 # these same keys are used in Display/PositionableProperties, Operations and signaling/EntryExit
 Color           = Farve
