Logging i18n Dutch translation add title to Message Log output window

--- a/java/src/jmri/jmrit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/Bundle_nl.properties
@@ -219,3 +219,10 @@ NoProgrammerConnected   = Geen programmer aangesloten
 
 # AmpMeter items
 TrackCurrentMeterTitle  = Baanstroommeter
+
+# Log tool items
+LogOutputTitle  = Berichtenlogboek
+LogInputTitle   = Voeg toe aan Log
+LogSendToolTip  = Voeg tekstregel aan Logboek toe
+LogMessageLabel = Bericht:
+AddButtonText   = Voeg toe
