more internationlzation of operations tests; some test cleanup

--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_ca.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_ca.properties
@@ -45,6 +45,10 @@ Number              = N\u00famero
 Type                = Tipus
 RWE                 = RWE
 Destination         = Destinaci\u00f3
+Passenger           = Passenger
+Caboose             = Caboose
+Fred                = FRED
+Utility             = Utility
 
 # Conductor and Yardmaster common
 # buttons titles/action verbs
