--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_de.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_de.properties
@@ -44,6 +44,10 @@ Type            = Typ
 RWE             = RWL
 Load            = Ladung
 Loads           = Ladungen
+Passenger               = Personen
+Caboose                 = Bremswagen
+Fred                    = Zugschlusssignal
+Utility                 = Dienst
 
 # Conductor and Yardmaster common
 # buttons titles/action verbs
