--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_en_GB.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_en_GB.properties
@@ -13,6 +13,7 @@ cars                = wagons
 
 Road                = Railway
 RailroadName        = Railway Name
+Caboose             = Brake van
 
 # Cardinal directions - overrule US english terms
 North               = Up
