--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_fr.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_fr.properties
@@ -43,6 +43,10 @@ Work                = Travail
 Hazardous           = Dangereux
 Destination         = Destination
 Kernel              = Noyau
+Passenger   = Passager
+Caboose     = Fourgon de Queue
+Fred        = FRED
+Utility     = Utilit\u00e9
 
 # Cardinal directions
 East                = Est
