--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_it.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_it.properties
@@ -47,6 +47,10 @@ RWE             = RV
 RWELabel        = Ritorna Vuoto:
 Hazardous       = Pericoloso
 Destination     = Destinazione
+Passenger = Passeggeri
+Caboose = Caboose
+Fred = Luci di Coda
+Utility = Utilit\u00e0
 
 # Conductor and Yardmaster common
 # buttons titles/action verbs
