--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_ja_JP.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_ja_JP.properties
@@ -42,6 +42,7 @@ RailroadName    = \u9244\u9053\u540d\u79f0
 Owner           = \u6240\u6709\u8005
 Comment         = \u30b3\u30e1\u30f3\u30c8
 Destination     = \u884c\u304d\u5148
+Caboose             = Caboose
 
 # Conductor and Yardmaster common
 # buttons titles/action verbs
