--- a/java/src/jmri/jmrit/operations/JmritOperationsBundle_da.properties
+++ b/java/src/jmri/jmrit/operations/JmritOperationsBundle_da.properties
@@ -49,6 +49,10 @@ Owner               = Ejer
 Hazardous           = Farligt
 Destination         = Destination
 Kernel              = Indhold
+Passenger           = Passenger
+Caboose             = Caboose
+Fred                = FRED
+Utility             = Utility
 
 # Conductor and Yardmaster common
 # buttons titles/action verbs
