Add second Headless test Add some NX translated keys for _nl and _de

--- a/java/src/jmri/jmrit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/Bundle_nl.properties
@@ -12,7 +12,7 @@ MenuItemDecoderProOpsModeProgrammer = Ops-Mode (POM) Programmer
 MenuItemMultiDecoderControl = Multi-Decoder aansturing
 
 MenuItemTurnoutControl = Wisselaansturing...
-MenuItemLightControl = Lampenaansturing...
+MenuItemLightControl = Lampaansturing...
 MenuItemTurnoutTable = Wissels
 MenuItemSensorTable = Terugmelders
 MenuItemLightTable = Lampen
