--- a/java/src/jmri/jmrit/signalling/SignallingBundle_de.properties
+++ b/java/src/jmri/jmrit/signalling/SignallingBundle_de.properties
@@ -64,15 +64,15 @@ ValueBeNumber = Dauer der Farbe\u00fcbergang soll ein Zahl sein!
 RouteSetColour = Initieller Farbe eines Pfades w\u00e4hrend Routeneingabe
 OptionsTitle = Eintritts-/Ausgangsoptionen
 Reselection = Routenwiederauswahl Option
-#+ ReselectionTip = Set the action for when the NX buttons are reselected
+ReselectionTip = Definiere was geschehen soll wenn die NX Kn\u00f6pfe wieder ausgew\u00e4hlt werden.
 
 EndBumperPoint = Zielpunkt ist an einem Prellblock; an dieser Stelle kan man keine "Zweiweg NX" erstellen.
 
 SetTurnoutsOnly = Nur Weichen stellen
 SetTurnoutsAndSignalMasts = Weichen und Signalmasten stellen
-FullInterlock = Komplette Verriegelung
+FullInterlock = Fahrsta\u00dfenverrieglung
 NXType = NX Typ
-#+ DiscoverEntryExitPairs = Discover Entry Exit Pairs
+DiscoverEntryExitPairs = Suche Eintritts-/Ausgangspunkte
 DiscoveringEntryExitPairs = Eintritts-/Ausgangspunkte suchen...
 AutoGenComplete = Autom. Eintritts-/Ausgangspunkte fertig
 
@@ -88,10 +88,10 @@ ColumnBoth = Zweiweg
 DispatcherInt = Zusammenarbeit mit Leitstelle
 WindowTitleStackRoutes = Aufgestapelte Routenstrecken
 
-#+ PromptUser = Prompt User
-#+ ClearRoute = Clear Route
-#+ CancelRoute = Cancel Route
-#+ StackRoute = Stack Route
+PromptUser = Frage mich
+ClearRoute = Strecke freigeben
+CancelRoute = Strecke abbrechen
+StackRoute = Strecke aufstapeln
 
 # colors use jmrit.Bundle
 
