--- a/java/src/jmri/jmrit/signalling/SignallingBundle_nl.properties
+++ b/java/src/jmri/jmrit/signalling/SignallingBundle_nl.properties
@@ -11,7 +11,6 @@ UpdateLogicButton = Werk Seinmastlogica bij
 UpdateButtonToolTip = Wijzig Seinmastlogica
 ApplyButtonToolTip = Seinmastlogica aanpassen en Bewerkingsmodus afsluiten
 AddLogic = Voeg Seinmastlogica toe
-#UseLayoutEditorPaths = Baanschema uit Spoorplan Editor gebruiken
 UseLayoutEditorPaths = Paden uit Spoorplan Editor gebruiken
 UseTurnoutDetails = Wisselkenmerken uit Spoorplan Editor gebruiken
 UseBlockDetails = Blokkenmerken uit Spoorplan Editor gebruiken
@@ -65,15 +64,15 @@ ValueBeNumber = Duur van kleurverloop invoeren als geheel getal!
 RouteSetColour = Initieel Padkleur tijdens Routeselectie
 OptionsTitle = Opties voor In-/Uitrijpunten
 Reselection = Optie Route Opnieuw Kiezen
-ReselectionTip = Set the action for when the NX buttons are reselected
+ReselectionTip = Stel actie in om uit te voeren als de NX knoppen opnieuw aangekruisd worden.
 
 EndBumperPoint = Doel is een stootblok; op deze plek kan men geen "2-Richting NX" aanmaken.
 
 SetTurnoutsOnly = Alleen Wissels bedienen
 SetTurnoutsAndSignalMasts = Wissels en Seinmasten bedienen
 FullInterlock = Rijwegbeveiliging
-NXType = NX Type
-#+ DiscoverEntryExitPairs = Discover Entry Exit Pairs
+NXType = NX-type
+DiscoverEntryExitPairs = Ontdek In-/Uitrijpunten
 DiscoveringEntryExitPairs = Zoek In-/Uitrijpunten...
 AutoGenComplete = Autom. In-/Uitrijpunten voltooid
 
@@ -89,10 +88,10 @@ ColumnBoth = 2-Richting
 DispatcherInt = Integreer met Verkeersleiding
 WindowTitleStackRoutes = Gestapelde paden
 
-#+ PromptUser = Prompt User
-#+ ClearRoute = Clear Route
-#+ CancelRoute = Cancel Route
-#+ StackRoute = Stack Route
+PromptUser = Vraag mij
+ClearRoute = Geef Route vrij
+CancelRoute = Annuleer Route
+StackRoute = Stapel Route
 
 # colors use jmrit.Bundle
 
