Move shared LocoNet keys from specific DB150 props to LocoNetBundle 2 buttons to NBB, fix CmdStn code paths Correct props headers

--- a/java/src/jmri/NamedBeanBundle_ja_JP.properties
+++ b/java/src/jmri/NamedBeanBundle_ja_JP.properties
@@ -103,6 +103,8 @@ ButtonSave      = \u4fdd\u5b58
 ButtonYes       = \u306f\u3044
 ButtonNo        = \u3044\u3044\u3048
 ButtonStop      = \u505c\u6b62
+ButtonRead      = \u8aad\u51fa\u3057
+ButtonWrite     = \u66f8\u8fbc\u307f
 
 ErrorTitle      = \u30a8\u30e9\u30fc
 WarningTitle    = \u8b66\u544a
