--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_da.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_da.properties
@@ -1,7 +1,7 @@
-# DB150options.properties
+# DB150options_da.properties
 #
-#Danish translation by Sonny Hansen
-#Overides some Default command station options for the DB150 (Empire Builder)
+# Danish translation by Sonny Hansen
+# Overides some Default command station options for the DB150 (Empire Builder)
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -11,14 +11,6 @@ MIN_OPTION = 1
 MAX_OPTION = 57
 
 LabelTop = DB150 (Empire Builder) Programmer
-LabelC = C
-LabelT = T
-ButtonRead = L\u00e6s
-ButtonWrite = Skriv
-CheckBoxReserved = Viser reserverede option switches
-Reserved = Reserveret, OBS! M\u00e5 ikke \u00e6ndres
-
-HeadingText = Teksten beskriver effekten p\u00e5 systemet n\u00e5r C "Closed" bliver valgt
 
 Option2 = 2: Booster only override
 Option3 = 3: Booster is autoreversing
@@ -45,5 +37,3 @@ Option42 = 42: Disable 3 beeps when loco address purged
 Option43 = 43: Disable LocoNet update of track status
 Option50 = 50: Longer booster short circuit recovery time
 Option51 = 51: Do not allow EXT voltage RESTART
-
-
