--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_es.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_es.properties
@@ -1,7 +1,6 @@
-# DB150options.properties
+# DB150options_es.properties
 #
-#
-# Default command station options for the DB150 (Empire Builder)
+# Spanish command station options for the DB150 (Empire Builder)
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -11,14 +10,6 @@ MIN_OPTION = 1
 MAX_OPTION = 57
 
 LabelTop = Programador de DB150 (Empire Builder)
-LabelC = C
-LabelT = T
-ButtonRead = Leer
-ButtonWrite = Escribir
-CheckBoxReserved = Mostrar ajustes reservados
-Reserved = Reservado
-
-HeadingText = Los objetos describen el efecto en la operaci\u00f3n cuando est\u00e1 en posici\u00f3n "cerrado"
 
 Option2 = 2: Solo booster
 Option3 = 3: El booster est\u00e1 en autoinversi\u00f3n
