--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_fr.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_fr.properties
@@ -1,7 +1,6 @@
-# DB150options.properties
+# DB150options_fr.properties
 #
-#
-# Default command station options for the DB150 (Empire Builder)
+# French command station options for the DB150 (Empire Builder)
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -11,14 +10,6 @@ MIN_OPTION = 1
 MAX_OPTION = 57
 
 LabelTop = Programmateur DB150 (Empire Builder)
-LabelC = C
-LabelT = T
-ButtonRead = &#201;criture
-ButtonWrite = Lecture
-CheckBoxReserved = Montrer les commutateurs d'options r&#233;serv&#233;es
-Reserved = R&#233;serv&#233;
-
-HeadingText = Les &#233;l&#233;ments d&#233;crivent l'effet sur le syst&#232;me en position "ferm&#233;"
 
 Option2 = 2: Booster seulement ignor&#233;
 Option3 = 3: Booster est autoreverse
@@ -44,6 +35,4 @@ Option41 = 41: Clic de Diagnostic quand la commande LocoNet est re&#231;ue
 Option42 = 42: D&#233;sactiver 3 beeps quand  l'adresse loc est purg&#233;e
 Option43 = 43: D&#233;sactive Mise &#224; jour LocoNet de l'&#233;tat de la voie
 Option50 = 50: Temps de re&#233;nclenchement plus long du booster sur court-circuit
-Option51 = 51: Ne pas autoriser le RED&#201;MARRAGE d'une tension EXT (avec 2nd booster en parall&#232;le))
-
-
+Option51 = 51: Ne pas autoriser le RED&#201;MARRAGE d'une tension EXT (avec 2nd booster en parall&#232;le)
