--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS50options_da.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS50options_da.properties
@@ -1,7 +1,6 @@
-# DCS50options.properties
+# DCS50options_da.properties
 #
-#
-# Default command station options for the DCS50 (Zephyr)
+# Danish command station options for the DCS50 (Zephyr)
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -43,4 +42,3 @@ Option36 = 36: Clear all mobile decoder info and consists
 Option39 = 39: Clear all internal memory
 Option43 = 43: Disable LocoNet update of track status
 Option45 = 45: Disable reply for switch state request
-
