--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS50options_fr.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS50options_fr.properties
@@ -1,7 +1,6 @@
-# DCS50options.properties
+# DCS50options_fr.properties
 #
-#
-# Default command station options for the DCS50 (Zephyr)
+# French command station options for the DCS50 (Zephyr)
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -44,4 +43,3 @@ Option36 = 36: Effacer toutes les informations du d&#233;codeur mobile et des co
 Option39 = 39: Effacer toute la m&#233;moire interne
 Option43 = 43: D&#233;sactive Mise &#224; jour LocoNet de l'&#233;tat de la voie 
 Option45 = 45: D&#233;sactiver la r&#233;ponse quand l'&#233;tat des commutateurs est demand&#233
-
