--- a/java/src/jmri/jmrix/loconet/LocoNetBundle_de.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle_de.properties
@@ -1,7 +1,7 @@
 # LocoNetBundle_de.properties
 #
-# by Simon Ginsburg
 # German properties for the jmri.jmrix.loconet menu
+# Translation by Simon Ginsburg
 
 MenuLocoNet                 = LocoNet
 
@@ -58,5 +58,12 @@ AbstractBoardProgPanel_ReadFrom = Lese von {0}
 AbstractBoardProgPanel_WriteTo = Schreibe nach {0}
 AbstractBoardProgPanel_Done_Message = Modulzugriff beendet.
 AbstractBoardProgPanel_GenericDeviceString = Modul
-LN_MSG_SWITCH_STATE_CLOSED=Geradeaus
-LN_MSG_SWITCH_STATE_THROWN=Abzweigend
+LN_MSG_SWITCH_STATE_CLOSED  = Geradeaus
+LN_MSG_SWITCH_STATE_THROWN  = Abzweigend
+
+#cmdstnconfig shared Bundle items (hardware specific strings fetched using ResourceBundle)
+LabelC = G
+LabelT = A
+CheckBoxReserved = Zeige reservierte Optionen
+Reserved = Reserviert
+HeadingText = Optionen zeigen Zustand wenn "G"eschlossen
