--- a/java/src/jmri/jmrix/loconet/LocoNetBundle_nl.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle_nl.properties
@@ -75,10 +75,17 @@ AbstractBoardProgPanel_ErrorAddressRange = Adres niet in geldig bereik. Adres ki
 # when a "board type name" has not been provided by the class which extends 
 # loconet.AbstractBoardProgPanel 
 AbstractBoardProgPanel_GenericDeviceString = Module
-LN_MSG_SWITCH_STATE_CLOSED=Rechtdoor
-LN_MSG_SWITCH_STATE_THROWN=Afbuigend
+LN_MSG_SWITCH_STATE_CLOSED  = Rechtdoor
+LN_MSG_SWITCH_STATE_THROWN  = Afbuigend
 LN_MSG_SENSOR_STATE_LOW     = Laag
 LN_MSG_SENSOR_STATE_HIGH    = Hoog
 
 # LnTurnout (Add to table pane) items
-AddOutputEntryToolTip = een getal van 1 tot en met 2048.
+AddOutputEntryToolTip       = een getal van 1 tot en met 2048.
+
+#cmdstnconfig shared Bundle items (hardware specific strings fetched using ResourceBundle)
+LabelC                      = R
+LabelT                      = A
+CheckBoxReserved            = Toon ook gereserveerde opties
+Reserved                    = Gereserveerd
+HeadingText                 = Opties beschrijven de toestand bij "R"echtdoor (Closed)
