--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_de.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_de.properties
@@ -1,7 +1,7 @@
-# DB150options.properties
+# DB150options_de.properties
 #
-# by Simon Ginsburg
 # German command station options for the DB150 (Empire Builder)
+# Translation by Simon Ginsburg
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -11,39 +11,29 @@ MIN_OPTION = 1
 MAX_OPTION = 57
 
 LabelTop = DB150 (Empire Builder) Konfigurator
-LabelC = G
-LabelT = O
-ButtonRead = Lesen
-ButtonWrite = Schreiben
-CheckBoxReserved = Zeige reservierte Optionen
-Reserved = Reserviert
 
-HeadingText = Optionen zeigen Zustand wenn "G"eschlossen
-
-Option2 = 2\: Verst\u00e4rker \u00dcbersteuerung
-Option3 = 3\: Verst\u00e4rker mit Kehrschleifenautomatik
-Option5 = 5\: Zentraleinheitenmodus
-Option13 = 13\: Lokadressl\u00f6schen erst nach 600 Sekunden
-Option14 = 14\: Kein Lokadressl\u00f6schen
-Option15 = 15\: Lokadressl\u00f6schen erst nach dem Senden eines Stillstandssignals
-Option17 = 17\: Automatisches Ezeugen von Decoderbasierter Mehrlokkompositionen ausgeschaltet
-Option18 = 18\: Kurzschlussdetektionszeit des Verst\u00e4rkers auf 1/2 Sekunden verl\u00e4ngert
-Option19 = 19\: Reserviert
-Option20 = 20\: Analogbetriebsadresse 0 ausgeschaltet
-Option21 = 21\: Vorgabewert f\u00fcr neue Lok\: FX
-Option22 = 22\: Vorgabewert f\u00fcr neue Lok\: 28 Stufen
-Option23 = 23\: Vorgabewert f\u00fcr neue Lok\: 14 Stufen
-Option27 = 27\: Normale Weichenschaltung ausgeschaltet (Bushby Bit)
-Option28 = 28\: Abfrage der DS54 beim Aufstarten ausgeschaltet
-Option33 = 33\: Nach Spannungswiederkehr Gleisspannungsmodus wiederherstellen
-Option34 = 34\: Nach Spannungswiederkehr automatische Gleisspannung zulassen
-Option36 = 36\: Alle Informationen von Loks und Mehrfachtraktionen l\u00f6schen
-Option38 = 38\: Lokinfo l\u00f6schen
-Option39 = 39\: Gesamtspeicher l\u00f6schen
-Option41 = 41\: Diagnoseton bei jedem erhaltenen LocoNet Befehl
-Option42 = 42\: Dreifachton beim L\u00f6schen einer Lokadresse ausschalten
-Option43 = 43\: Aktualisierung des Gleisstatus \u00fcber LocoNet ausschalten
-Option50 = 50\: Verl\u00e4ngerte Ausschaltzeit nach Kurzschlussdetektion
-Option51 = 51\: Spannungseinschaltbefehl von extern ausgeschaltet
-
-
+Option2 = 2: Verst\u00e4rker \u00dcbersteuerung
+Option3 = 3: Verst\u00e4rker mit Kehrschleifenautomatik
+Option5 = 5: Zentraleinheitenmodus
+Option13 = 13: Lokadressl\u00f6schen erst nach 600 Sekunden
+Option14 = 14: Kein Lokadressl\u00f6schen
+Option15 = 15: Lokadressl\u00f6schen erst nach dem Senden eines Stillstandssignals
+Option17 = 17: Automatisches Ezeugen von Decoderbasierter Mehrlokkompositionen ausgeschaltet
+Option18 = 18: Kurzschlussdetektionszeit des Verst\u00e4rkers auf 1/2 Sekunden verl\u00e4ngert
+Option19 = 19: Reserviert
+Option20 = 20: Analogbetriebsadresse 0 ausgeschaltet
+Option21 = 21: Vorgabewert f\u00fcr neue Lok: FX
+Option22 = 22: Vorgabewert f\u00fcr neue Lok: 28 Stufen
+Option23 = 23: Vorgabewert f\u00fcr neue Lok: 14 Stufen
+Option27 = 27: Normale Weichenschaltung ausgeschaltet (Bushby Bit)
+Option28 = 28: Abfrage der DS54 beim Aufstarten ausgeschaltet
+Option33 = 33: Nach Spannungswiederkehr Gleisspannungsmodus wiederherstellen
+Option34 = 34: Nach Spannungswiederkehr automatische Gleisspannung zulassen
+Option36 = 36: Alle Informationen von Loks und Mehrfachtraktionen l\u00f6schen
+Option38 = 38: Lokinfo l\u00f6schen
+Option39 = 39: Gesamtspeicher l\u00f6schen
+Option41 = 41: Diagnoseton bei jedem erhaltenen LocoNet Befehl
+Option42 = 42: Dreifachton beim L\u00f6schen einer Lokadresse ausschalten
+Option43 = 43: Aktualisierung des Gleisstatus \u00fcber LocoNet ausschalten
+Option50 = 50: Verl\u00e4ngerte Ausschaltzeit nach Kurzschlussdetektion
+Option51 = 51: Spannungseinschaltbefehl von extern ausgeschaltet
