--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_it.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_it.properties
@@ -13,21 +13,13 @@ MIN_OPTION = 1
 MAX_OPTION = 57
 
 LabelTop = Programmatore DB150 (Empire Builder)
-LabelC = C
-LabelT = T
-ButtonRead = Leggi
-ButtonWrite = Scrivi
-CheckBoxReserved = Visualizza opzioni riservate
-Reserved = Riservato
-
-HeadingText = Oggetti che hanno effetto sul sistema quando configurati "chiusi"
 
 Option2 = 2: Programma come Solo-Booster
 Option3 = 3: Booster in Auto Reverse
 Option5 = 5: Centrale in Modo Master
 Option13 = 13: Incrementa tempo cancellazione indirizzo loco a 600 secondi
 Option14 = 14: Disabilita cancellazione indirizzo loco
-Option15 = 15: Cancellazione forzer\u00E0 loco a velocit\u00E0 zero
+Option15 = 15: Cancellazione forzer\u00e0 loco a velocit\u00e0 zero
 Option17 = 17: Consist Automatico Advanzato disabilitato
 Option18 = 18: Estendi interruzione alim. booster per cortcirc. a 1/2 secondo
 Option19 = 19: Riservato
@@ -47,5 +39,3 @@ Option42 = 42: Disabilita 3 beeps quando si cancella Indirizzo loco
 Option43 = 43: Disabilita Aggiornamento Stato Binari LocoNet
 Option50 = 50: Allunga tempo di ripristino booster da corto circuito
 Option51 = 51: Non permettere RESTART da Tensione EXT
-
-
