Clean up all other LocoNet cmdstation bundles, headers Fixed empty _de props by english copy Fixed French escape chars

--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS100options_fr.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS100options_fr.properties
@@ -1,8 +1,6 @@
-#DCS100options.properties
+#DCS100options_fr.properties
 #
-# Revision $Revision$
-#
-# Default command station options for the DCS100 (Chief)
+# French default command station options for the DCS100 (Chief)
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -12,14 +10,7 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = Programmateur DCS100 (Chief)
-LabelC = C
-LabelT = T
-ButtonRead = &#201;criture
-ButtonWrite = Lecture
-CheckBoxReserved = Montrer les commutateurs d'options r&#233;serv&#233;es
-Reserved = R&#233;serv&#233;
 
-HeadingText = Les &#233;l&#233;ments d&#233;crivent l'effet sur le syst&#232;me en position "ferm&#233;"
 Option2 = 2: configure DCS100 en Booster seulement, pas en centrale
 Option3 = 3: Booster est autoreverse
 Option5 = 5: Centrale en mode Maitre
