--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS200options_ja_JP.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS200options_ja_JP.properties
@@ -1,7 +1,6 @@
-# DCS200options.properties
+# DCS200options_ja_JP.properties
 #
-#
-# Default command station options for the DCS200
+# Japanese command station options for the DCS200
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -10,15 +9,7 @@ MIN_OPTION = 1
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 49
 
-LabelTop = DCS200\u30D7\u30ED\u30B0\u30E9\u30DE\u30FC
-LabelC = C
-LabelT = T
-ButtonRead = \u8AAD\u307F\u51FA\u3057
-ButtonWrite = \u66F8\u8FBC
-CheckBoxReserved = Show reserved option switches
-Reserved = \u4E88\u7D04
-
-HeadingText = Items describe effect on system operation when set "closed"
+LabelTop = DCS200\u30d7\u30ed\u30b0\u30e9\u30de\u30fc
 
 Option2 = 2: Make DCS200 a booster only, not a command station
 Option3 = 3: Booster is autoreversing
@@ -53,4 +44,3 @@ Option43 = 43: Disable LocoNet update of track status
 Option44 = 44: Expand slots to 120
 Option45 = 45: Disable reply for switch state request
 Option47 = 47: Program track is brake generator
-
