--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_fr.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_fr.properties
@@ -1,7 +1,6 @@
-# Defaultoptions.properties
+# Defaultoptions_fr.properties
 #
-#
-# Default command station options for when the command
+# French default command station options for when the command
 # station isn't recognized.  These are the same as the Chief (DCS100)
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
@@ -12,14 +11,6 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = Programmateur de Centrale de Commande
-LabelC = C
-LabelT = T
-ButtonRead = &#201;criture
-ButtonWrite = Lecture
-CheckBoxReserved = Montrer les commutateurs d'options r&#233;serv&#233;es
-Reserved = R&#233;serv&#233;
-
-HeadingText = Les &#233;l&#233;ments d&#233;crivent l'effet sur le syst&#232;me en position "ferm&#233;"
 
 Option2 = 2: Configurer l'unit&#233; pour &#234;tre seulement un booster, pas une central
 Option3 = 3: Booster est autoreverse 
@@ -48,10 +39,9 @@ Option36 = 36: Effacer toutes les informations du d&#233;codeur mobile et des co
 Option37 = 37: Effacer tous les itin&#233;raires
 Option38 = 38: Effacer l'inventaire Loco
 Option39 = 39: Effacer toute la m&#233;moire interne
-Option41 = 41: Clic de Diagnostice quand la commande LocoNet est reçue
+Option41 = 41: Clic de Diagnostice quand la commande LocoNet est re\u00e7ue
 Option42 = 42: D&#233;sactiver 3 beeps quand l'adresse loc est purg&#233;e 
 Option43 = 43: D&#233;sactive Mise &#224; jour LocoNet de l'&#233;tat de la voie 
 Option44 = 44: &#201;tendre les emplacements &#224; 120
 Option45 = 45: D&#233;sactiver la r&#233;ponse quand l'&#233;tat des commutateurs est demand&#233;
 Option47 = 47: Le programme de la voie est g&#233;n&#233;rateur de freinage
-
