--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_fr.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_fr.properties
@@ -1,7 +1,6 @@
-# Intelliboxoptions.properties
+# Intelliboxoptions_fr.properties
 #
-#
-# Default command station options for the Intellibox.
+# French command station options for the Intellibox.
 # These were actually taken from the DCS100, and it's
 # not at all clear what if anything should be here.
 
@@ -13,11 +12,3 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = Programmateur Intellibox
-LabelC = C
-LabelT = T
-ButtonRead = Lire
-ButtonWrite =&#201;crire
-CheckBoxReserved = Montrer les commutateurs d'options r&#233;serv&#233;es
-Reserved = R&#233;serv&#233;
-
-HeadingText = Les &#233;l&#233;ments d&#233;crivent l'effet sur le syst&#232;me en position "ferm&#233;"
