--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_it.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_it.properties
@@ -1,11 +1,9 @@
-# Intelliboxoptions.properties
+# Intelliboxoptions_it.properties
 #
-#
-# Italian translation: Enzo Fortuna (babbo_enzo@yahoo.com )
-#
-# Default command station options for the Intellibox.
+# Italian command station options for the Intellibox.
 # These were actually taken from the DCS100, and it's
 # not at all clear what if anything should be here.
+# Translation: Enzo Fortuna (babbo_enzo@yahoo.com )
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -15,11 +13,3 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = Programmatore Intellibox
-LabelC = C
-LabelT = T
-ButtonRead = Leggi
-ButtonWrite = Scrivi
-CheckBoxReserved = Visualizza opzioni riservate
-Reserved = Riservato
-
-HeadingText = Oggetti che hanno effetto sul sistema quando configurati "chiusi"
