--- a/java/src/jmri/jmrix/loconet/LocoNetBundle_ja_JP.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle_ja_JP.properties
@@ -26,7 +26,7 @@ MenuItemPr3ModeSelect = PR3\u52d5\u4f5c\u30e2\u30fc\u30c9\u9078\u629e
 MenuItemDuplex              = Configure Duplex Group
 
 #cmdstnconfig shared Bundle items (hardware specific strings fetched using ResourceBundle)
-LabelC = C
+LabelC = \u9589 (C)
 LabelT = T
 CheckBoxReserved = \u4e88\u7d04\u6e08\u307f\u30aa\u30d7\u30b7\u30e7\u30f3\u30b9\u30a4\u30c3\u30c1\u3082\u8868\u793a\u3059\u308b
 Reserved = \u4e88\u7d04
