--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS100options_da.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS100options_da.properties
@@ -1,7 +1,7 @@
-# DCS100options.properties
+# DCS100options_da.properties
 #
-#
-# Danish translation by Sonny Hansen#Overrides Default command station options for the DCS100 (Chief)
+# Danish translation by Sonny Hansen
+# Overrides Default command station options for the DCS100 (Chief)
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -11,14 +11,6 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = DCS100 (Chief) Programmer
-LabelC = C
-LabelT = T
-ButtonRead = L\u00e6s
-ButtonWrite = Skriv
-CheckBoxReserved = Viser reserverede option switches
-Reserved = Reserveret, OBS! M\u00e5 ikke \u00e6ndres
-
-HeadingText = Teksten beskriver effekten p\u00e5 systemet n\u00e5r C "Closed" bliver valgt
 
 Option2 = 2: Make DCS100 a booster only, not a command station  
 Option3 = 3: Booster is autoreversing
