--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS100options_ja_JP.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS100options_ja_JP.properties
@@ -1,5 +1,4 @@
-# DCS100options.properties
-#
+# DCS100options_ja_JP.properties
 #
 # Japanese command station options for the DCS100 (Chief)
 # Translated by Sakae Akanuma <sakaeakanuma@gmail.com>
@@ -11,15 +10,7 @@ MIN_OPTION = 1
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 49
 
-LabelTop = DCS100 (\u30C1\u30FC\u30D5\u2122) \u30D7\u30ED\u30B0\u30E9\u30DE\u30FC
-LabelC = C
-LabelT = T
-ButtonRead = \u8AAD\u307F\u51FA\u3057
-ButtonWrite = \u66F8\u8FBC
-CheckBoxReserved = Show reserved option switches
-Reserved = \u4E88\u7D04
-
-HeadingText = Items describe effect on system operation when set "closed"
+LabelTop = DCS100 (\u30c1\u30fc\u30d5\u2122) \u30d7\u30ed\u30b0\u30e9\u30de\u30fc
 
 Option2 = 2: Make DCS100 a booster only, not a command station
 Option3 = 3: Booster is autoreversing
