--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS200options_da.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS200options_da.properties
@@ -1,7 +1,6 @@
-# DCS200options.properties
+# DCS200options_da.properties
 #
-#
-# Default command station options for the DCS200
+# Danish command station options for the DCS200
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -11,14 +10,6 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = DCS200 Programmer
-LabelC = C
-LabelT = T
-ButtonRead = L\u00e6s
-ButtonWrite = Skriv
-CheckBoxReserved = Viser reserverede option switches
-Reserved = Reserveret, OBS! M\u00e5 ikke \u00e6ndres
-
-HeadingText = Teksten beskriver effekten p\u00e5 systemet n\u00e5r C "Closed" bliver valgt
 
 Option2 = 2: Make DCS200 a booster only, not a command station
 Option3 = 3: Booster is autoreversing
@@ -53,4 +44,3 @@ Option43 = 43: Disable LocoNet update of track status
 Option44 = 44: Expand slots to 120
 Option45 = 45: Disable reply for switch state request
 Option47 = 47: Program track is brake generator
-
