--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS200options_fr.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS200options_fr.properties
@@ -1,7 +1,6 @@
-# DCS200options.properties
+# DCS200options_fr.properties
 #
-#
-# Default command station options for the DCS200
+# French command station options for the DCS200
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -10,19 +9,10 @@ MIN_OPTION = 1
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 49
 
-
-LabelTop = Programmateur DCS200 
-LabelC = C
-LabelT = T
-ButtonRead = &#201;criture
-ButtonWrite = Lecture
-CheckBoxReserved = Montrer les commutateurs d'options r&#233;serv&#233;es
-Reserved = R&#233;serv&#233;
-
-HeadingText = Les &#233;l&#233;ments d&#233;crivent l'effet sur le syst&#232;me en position "ferm&#233;"
+LabelTop = Programmateur DCS200
 
 Option2 = 2: Booster seulement ignor&#233;
- Option3 = 3: Booster est autoreverse 
+Option3 = 3: Booster est autoreverse 
 Option5 = 5: Centrale en mode Maitre 
 Option9 = 9: Autoriser l'&#233;cho ternaire de Motorola pour 1-256
 Option10 = 10: &#201;tend l'&#233;cho des Commutateurs ternaires
@@ -48,10 +38,9 @@ Option36 = 36: Effacer toutes les informations du d&#233;codeur mobile et des co
 Option37 = 37: Effacer tous les itin&#233;raires  
 Option38 = 38: Effacer l'inventaire Loco
 Option39 = 39: Effacer toute la m&#233;moire interne
-Option41 = 41: Clic de Diagnostice quand la commande LocoNet est reçue
+Option41 = 41: Clic de Diagnostice quand la commande LocoNet est re\u00e7ue
 Option42 = 42: D&#233;sactiver 3 beeps quand l'adresse loco est purg&#233;e 
 Option43 = 43: D&#233;sactive Mise &#224; jour LocoNet de l'&#233;tat de la voie 
 Option44 = 44: &#201;tendre les emplacements &#224; 120
 Option45 = 45: D&#233;sactiver la r&#233;ponse quand l'&#233;tat des commutateurs est demand&#233;
 Option47 = 47: Le programme de la voie est g&#233;n&#233;rateur de freinage
-
