--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS240options_da.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS240options_da.properties
@@ -1,5 +1,4 @@
-# DCS240options.properties
-#
+# DCS240options_da.properties
 #
 # Danish translation by Sonny Hansen#Overrides Default command station options for the DCS240
 
@@ -11,14 +10,6 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = DCS240 Programmer
-LabelC = C
-LabelT = T
-ButtonRead = L\u00e6s
-ButtonWrite = Skriv
-CheckBoxReserved = Viser reserverede option switches
-Reserved = Reserveret, OBS! M\u00e5 ikke \u00e6ndres
-
-HeadingText = Teksten beskriver effekten p\u00e5 systemet n\u00e5r C "Closed" bliver valgt
 
 Option2 = 2: Make DCS240 a booster only, not a command station  
 Option3 = 3: Booster is autoreversing
