--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_da.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_da.properties
@@ -1,7 +1,6 @@
-# DCS51options.properties
+# DCS51options_da.properties
 #
-#
-# Default command station options for the DCS51 (Zephyr Xtra)
+# Danish command station options for the DCS51 (Zephyr Xtra)
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -11,14 +10,6 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = DCS51 (Zephyr Xtra) Programmer
-LabelC = C
-LabelT = T
-ButtonRead = L\u00e6s
-ButtonWrite = Skriv
-CheckBoxReserved = Viser reserverede option switches
-Reserved = Reserveret, OBS! M\u00e5 ikke \u00e6ndres
-
-HeadingText = Teksten beskriver effekten p\u00e5 systemet n\u00e5r C "Closed" bliver valgt
 
 Option1 = 1: One jump port (normally two)
 Option2 = 2: Booster/Throttle, not command station
@@ -44,4 +35,3 @@ Option34 = 34: Allow track to power up to run state
 Option39 = 39: Clear all internal memory
 Option43 = 43: Disable LocoNet update of track status
 Option45 = 45: Disable reply for switch state request
-
