--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_it.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_it.properties
@@ -1,9 +1,7 @@
-# DCS51options.properties
+# DCS51options_it.properties
 #
-#
-# Italian translation: Enzo Fortuna (babbo_enzo@yahoo.com )
-#
-# Default command station options for the DCS51 (Zephyr Xtra)
+# Italian command station options for the DCS51 (Zephyr Xtra)
+# Translation: Enzo Fortuna (babbo_enzo@yahoo.com )
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -13,14 +11,6 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = Programmatore DCS51 (Zephyr Xtra)
-LabelC = C
-LabelT = T
-ButtonRead = Leggi
-ButtonWrite = Scrivi
-CheckBoxReserved = Visualizza opzioni riservate
-Reserved = Riservato
-
-HeadingText = Oggetti che hanno effetto sul sistema quando configurati "chiusi"
 
 Option1 = 1: One jump port (normally two)
 Option2 = 2: Programma come Solo-Booster, non come Centrale
