--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_da.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_da.properties
@@ -1,7 +1,6 @@
-# Defaultoptions.properties
+# Defaultoptions_da.properties
 #
-#
-# Default command station options for when the command
+# Danish default command station options for when the command
 # station isn't recognized.  These are the same as the Chief (DCS100)
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
@@ -12,14 +11,6 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = Command Station Programmer
-LabelC = C
-LabelT = T
-ButtonRead = Read
-ButtonWrite = Write
-CheckBoxReserved = Show reserved option switches
-Reserved = Reserved
-
-HeadingText = Items describe effect on system operation when set "closed"
 
 Option2 = 2: Set unit to be booster only, not command station
 Option3 = 3: Booster is autoreversing
@@ -54,4 +45,3 @@ Option43 = 43: Disable LocoNet update of track status
 Option44 = 44: Expand slots to 120
 Option45 = 45: Disable reply for switch state request
 Option47 = 47: Program track is brake generator
-
