--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_de.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_de.properties
@@ -1,9 +1,9 @@
-# Intelliboxoptions.properties
+# Intelliboxoptions_de.properties
 #
-# by Simon Ginsburg
 # German command station options for the Intellibox.
 # These were actually taken from the DCS100, and it's
 # not at all clear what if anything should be here.
+# Translation by Simon Ginsburg
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -13,11 +13,3 @@ MIN_OPTION = 1
 MAX_OPTION = 49
 
 LabelTop = Intellibox Konfigurator
-LabelC = G
-LabelT = O
-ButtonRead = Lesen
-ButtonWrite = Schreiben
-CheckBoxReserved = Zeige reservierte Optionen
-Reserved = Reserviert
-
-HeadingText = Optionen zeigen Zustand wenn "G"eschlossen
