--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_ja_JP.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_ja_JP.properties
@@ -1,10 +1,9 @@
-# Intelliboxoptions.properties
+# Intelliboxoptions_ja_JP.properties
 #
-#
-# Default command station options for the Intellibox.
+# Japanese command station options for the Intellibox.
 # These were actually taken from the DCS100, and it's
 # not at all clear what if anything should be here.
-# Japanese translated by Sakae Akanuma <sakaeakanuma@gmail.com>
+# Translated by Sakae Akanuma <sakaeakanuma@gmail.com>
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -13,12 +12,4 @@ MIN_OPTION = 1
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 49
 
-LabelTop = \u30A4\u30F3\u30C6\u30EA\u30DC\u30C3\u30AF\u30B9\u30D7\u30ED\u30B0\u30E9\u30DE\u30FC
-LabelC = C
-LabelT = T
-ButtonRead = \u8AAD\u307F\u8FBC\u307F
-ButtonWrite = \u66F8\u304D\u51FA\u3057
-CheckBoxReserved = \u4E88\u7D04\u30AA\u30D7\u30B7\u30E7\u30F3\u30B9\u30A4\u30C3\u30C1\u3092\u8868\u793A\u3059\u308B
-Reserved = \u4E88\u7D04
-
-HeadingText = Items describe effect on system operation when set "\u9589"
+LabelTop = \u30a4\u30f3\u30c6\u30ea\u30dc\u30c3\u30af\u30b9\u30d7\u30ed\u30b0\u30e9\u30de\u30fc
