--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Mix-Masteroptions_da.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Mix-Masteroptions_da.properties
@@ -1,7 +1,7 @@
 # Mix-Masteroptions_da.properties
 #
-# by Dick Bronson
-# Danish translation by Sonny Hansen# Overrides some Default command station options for the Mix-Master
+# Danish translation by Sonny Hansen
+# Overrides some Default command station options for the Mix-Master
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -11,14 +11,6 @@ MIN_OPTION = 1
 MAX_OPTION = 57
 
 LabelTop = Mix-Master Programmer
-LabelC = C
-LabelT = T
-ButtonRead = L\u00e6s
-ButtonWrite = Skriv
-CheckBoxReserved = Vis reserverede option switches
-Reserved = Reserveret
-
-HeadingText = Teksten beskriver effekten p\u00e5 systemet n\u00e5r C "Closed" bliver valgt
 
 Option5 = 5: Command station master mode
 Option7 = 7: Enable Service-Mode programming
