--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Mix-Masteroptions_fr.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Mix-Masteroptions_fr.properties
@@ -1,7 +1,6 @@
-# Mix-Masteroptions.properties
+# Mix-Masteroptions_fr.properties
 #
-# by Dick Bronson
-# Default command station options for the Mix-Master
+# French command station options for the Mix-Master
 
 # Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
 CONFIG_SLOT = 127
@@ -10,23 +9,15 @@ MIN_OPTION = 1
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 57
 
-LabelTop = Programmateur Mix-Master 
-LabelC = C
-LabelT = T
-ButtonRead = &#201;criture
-ButtonWrite = Lecture
-CheckBoxReserved = Montrer les commutateurs d'options r&#233;serv&#233;es
-Reserved = R&#233;serv&#233;
-
-HeadingText = Les &#233;l&#233;ments d&#233;crivent l'effet sur le syst&#232;me en position "ferm&#233;"
+LabelTop = Programmateur Mix-Master
 
 Option5 = 5: Centrale en mode Maitre 
 Option7 = 7: Activer la programmation en Mode-Service
 Option13 = 13: Augmenter le temps de purge de l'adresse de la loco &#224; 600 secondes 
 Option14 = 14: D&#233;sactiver la purge de l'adresse de la loco 
 Option15 = 15: La purge force la loco &#224; une vitesse nulle  
-Option22 = 22: R&#233;glage par défaut pour une nouvelle loco: 28 crans 
-Option23 = 23: R&#233;glage par défaut pour une nouvelle loco: 14 crans
+Option22 = 22: R&#233;glage par d\u00e9faut pour une nouvelle loco: 28 crans 
+Option23 = 23: R&#233;glage par d\u00e9faut pour une nouvelle loco: 14 crans
 Option27 = 27: D&#233;sactiver les commandes de commutation normale(Bushby bit) 
 Option28 = 28: D&#233;sactiver interroger DS54 &#224; la mise sous tension 
 Option30 = 30: D&#233;sactiver le rafraichissement cyclique des fonctions F5-F12 de la loco
