fix cmdstn French character encoding

--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_ja_JP.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_ja_JP.properties
@@ -12,7 +12,7 @@ MAX_OPTION = 49
 
 LabelTop = \u30b3\u30de\u30f3\u30c9\u30b9\u30c6\u30fc\u30b7\u30e7\u30f3\u30d7\u30ed\u30b0\u30e9\u30de\u30fc
 
-Option2 = 2: Set unit to be booster only, not command station
+Option2 = 2: Set unit to be Booster only, not Command Station
 Option3 = 3: \u30d6\u30fc\u30b9\u30bf\u30fc\u306f\u30aa\u30fc\u30c8\u30ea\u30d0\u30fc\u30b9\u30e2\u30fc\u30c9\u3067\u52d5\u4f5c\u3059\u308b
 Option5 = 5: \u30b3\u30de\u30f3\u30c9\u30b9\u30c6\u30fc\u30b7\u30e7\u30f3\u30de\u30b9\u30bf\u30fc\u30e2\u30fc\u30c9
 Option9 = 9:\u30e2\u30c8\u30ed\u30fc\u30e9\u306e\u4e09\u3064\u7d44\u307f\u30a8\u30b3\u30fc\u3092 1-256\u306b\u5bfe\u3057\u3066\u8a31\u53ef\u3059\u308b
