--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_fr.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_fr.properties
@@ -11,28 +11,28 @@ MAX_OPTION = 57
 
 LabelTop = Programmateur DB150 (Empire Builder)
 
-Option2 = 2: Booster seulement ignor&#233;
+Option2 = 2: Booster seulement ignor\u00e9
 Option3 = 3: Booster est autoreverse
 Option5 = 5: Centrale en mode Maitre
-Option13 = 13: Augmenter le temps de purge de l'adresse de la loco &#224; 600 secondes
-Option14 = 14: D&#233;sactiver la purge de l'adresse de la loco
-Option15 = 15: La purge  force la loco &#224; une vitesse nulle
-Option17 = 17: Les Couplage Automatique avanc&#233; est d&#233;sactiv&#233;
-Option18 = 18: &#201;tendre l'arr&#234;t du booster &#224; 1/2 seconde
-Option19 = 19: R&#233;serv&#233;
-Option20 = 20: D&#233;sactive l'adresse 0 pour une exploitaion analogique
-Option21 = 21: R&#233;glage par d&#233;faut pour une nouvelle loco: FX
-Option22 = 22: R&#233;glage par d&#233;faut pour une nouvelle loco: 28 crans
-Option23 = 23: R&#233;glage par d&#233;faut pour une nouvelle loco: 14 crans
-Option27 = 27: D&#233;sactiver les commandes de commutation normale(Bushby bit)
-Option28 = 28: D&#233;sactiver interroger DS54 &#224; la mise sous tension
-Option33 = 33: Restaurer la puissance de la voie &#224; l'&#233;tat ant&#233;rieur lors de la mise sous tension
-Option34 = 34: Autoriser la voie &#224; se mettre en exploitation
-Option36 = 36: Effacer toutes les informations du d&#233;codeur mobile et des couplages
+Option13 = 13: Augmenter le temps de purge de l'adresse de la loco \u00e1 600 secondes
+Option14 = 14: D\u00e9sactiver la purge de l'adresse de la loco
+Option15 = 15: La purge  force la loco \u00e1 une vitesse nulle
+Option17 = 17: Les Couplage Automatique avanc\u00e9 est d\u00e9sactiv\u00e9
+Option18 = 18: \u00c9tendre l'arr\u00eat du booster \u00e1 1/2 seconde
+Option19 = 19: R\u00e9serv\u00e9
+Option20 = 20: D\u00e9sactive l'adresse 0 pour une exploitaion analogique
+Option21 = 21: R\u00e9glage par d\u00e9faut pour une nouvelle loco: FX
+Option22 = 22: R\u00e9glage par d\u00e9faut pour une nouvelle loco: 28 crans
+Option23 = 23: R\u00e9glage par d\u00e9faut pour une nouvelle loco: 14 crans
+Option27 = 27: D\u00e9sactiver les commandes de commutation normale(Bushby bit)
+Option28 = 28: D\u00e9sactiver interroger DS54 \u00e1 la mise sous tension
+Option33 = 33: Restaurer la puissance de la voie \u00e1 l'\u00e9tat ant\u00e9rieur lors de la mise sous tension
+Option34 = 34: Autoriser la voie \u00e1 se mettre en exploitation
+Option36 = 36: Effacer toutes les informations du d\u00e9codeur mobile et des couplages
 Option38 = 38: Effacer l'inventaire Loco
-Option39 = 39: Effacer toute la m&#233;moire interne
-Option41 = 41: Clic de Diagnostic quand la commande LocoNet est re&#231;ue
-Option42 = 42: D&#233;sactiver 3 beeps quand  l'adresse loc est purg&#233;e
-Option43 = 43: D&#233;sactive Mise &#224; jour LocoNet de l'&#233;tat de la voie
-Option50 = 50: Temps de re&#233;nclenchement plus long du booster sur court-circuit
-Option51 = 51: Ne pas autoriser le RED&#201;MARRAGE d'une tension EXT (avec 2nd booster en parall&#232;le)
+Option39 = 39: Effacer toute la m\u00e9moire interne
+Option41 = 41: Clic de Diagnostic quand la commande LocoNet est re\u00e7ue
+Option42 = 42: D\u00e9sactiver 3 beeps quand  l'adresse loc est purg\u00e9e
+Option43 = 43: D\u00e9sactive Mise \u00e1 jour LocoNet de l'\u00e9tat de la voie
+Option50 = 50: Temps de re\u00e9nclenchement plus long du booster sur court-circuit
+Option51 = 51: Ne pas autoriser le RED\u00c9MARRAGE d'une tension EXT (avec 2nd booster en parall\u00e8le)
