--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_fr.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_fr.properties
@@ -12,9 +12,9 @@ MAX_OPTION = 49
 LabelTop =Programmateur DCS51 P(Zephyr)
 
 Option1 = 1: Un port cavalier (normalement deuxo)
-Option2 = 2: Booster/R\u00e9gulateur, pas une centrale
+Option2 = 2: Booster/R\u00e9gulateur, pas une Centrale
 Option3 = 3: Booster est autoreverse
-Option5 = 5: Pas de changement pour l'ID R\u00e9gulateur, Vmax et taux de freinage 
+Option5 = 5: Pas de changement pour l'ID R\u00e9gulateur, Vmax et Taux de freinage 
 Option6 = 6: Fonction 3 est verrouill\u00e9e
 Option7 = 7: Programmation en mode Blast pour les d\u00e9codeurs sons
 Option10 = 10: Rappel Profondeur 4
@@ -23,7 +23,7 @@ Option13 = 13: Augmenter le temps de purge de l'adresse de la loco \u00e1 600 se
 Option14 = 14: D\u00e9sactiver la purge de l'adresse de la loco 
 Option15 = 15: La purge force la loco \u00e1 une vitesse nulle  
 Option17 = 17: la fonction Couplage Automatique avanc\u00e9 est d\u00e9sactiv\u00e9e
-Option18 = 18: &#201;tendre l'arr\u00eat du booster \u00e1 1/2 seconde
+Option18 = 18: \u00c9tendre l'arr\u00eat du booster \u00e1 1/2 seconde
 Option20 = 20: D\u00e9sactive l'adresse 0 pour une exploitaion analogique 
 Option21 = 21: R\u00e9glage par d\u00e9faut pour une nouvelle loco: FX 
 Option22 = 22: R\u00e9glage par d\u00e9faut pour une nouvelle loco: 28 crans 
