Fix missing DCS51_de props Adjust Digitrax config descriptions

--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS50options_de.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS50options_de.properties
@@ -12,7 +12,7 @@ MAX_OPTION = 49
 
 LabelTop = DCS50 (Zephyr) Konfigurator
 
-Option1 = 1: Ein (statt zwei) Regleranschl\u00fcsse
+Option1 = 1: Ein (statt t = zwei) Regleranschl\u00fcsse
 Option2 = 2: Verst\u00e4rkermodus, keine Zentraleinheitsfunktion
 Option3 = 3: Verst\u00e4rker mit Kehrschleifenautomatik
 Option5 = 5: Zentraleinheitenmodus
