--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_it.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_it.properties
@@ -12,7 +12,7 @@ MAX_OPTION = 49
 
 LabelTop = Programmatore DCS51 (Zephyr Xtra)
 
-Option1 = 1: One jump port (normally two)
+Option1 = 1: One Jump port (t = two Jump ports)
 Option2 = 2: Programma come Solo-Booster, non come Centrale
 Option3 = 3: Booster in Auto Reverse
 Option5 = 5: Nessuna modifica permessa al ID del throttle, Vmax o frequenza Frenata
