--- a/java/src/jmri/jmrix/loconet/LocoNetBundle_de.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle_de.properties
@@ -66,4 +66,4 @@ LabelC = G
 LabelT = A
 CheckBoxReserved = Zeige reservierte Optionen
 Reserved = Reserviert
-HeadingText = Optionen zeigen Zustand wenn "G"eschlossen
+HeadingText = Optionen zeigen Wirkung wenn "G"eschlossen
