--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_de.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_de.properties
@@ -14,13 +14,12 @@ LabelTop = DB150 (Empire Builder) Konfigurator
 
 Option2 = 2: Verst\u00e4rker \u00dcbersteuerung
 Option3 = 3: Verst\u00e4rker mit Kehrschleifenautomatik
-Option5 = 5: Zentraleinheitenmodus
+Option5=5: Zentraleinheitenmodus (Normal = 'c')
 Option13 = 13: Lokadressl\u00f6schen erst nach 600 Sekunden
 Option14 = 14: Kein Lokadressl\u00f6schen
 Option15 = 15: Lokadressl\u00f6schen erst nach dem Senden eines Stillstandssignals
-Option17 = 17: Automatisches Ezeugen von Decoderbasierter Mehrlokkompositionen ausgeschaltet
+Option17 = 17: Automatisches Ezeugen von Decoderbasierter Mehrfachtraktion ausgeschaltet
 Option18 = 18: Kurzschlussdetektionszeit des Verst\u00e4rkers auf 1/2 Sekunden verl\u00e4ngert
-Option19 = 19: Reserviert
 Option20 = 20: Analogbetriebsadresse 0 ausgeschaltet
 Option21 = 21: Vorgabewert f\u00fcr neue Lok: FX
 Option22 = 22: Vorgabewert f\u00fcr neue Lok: 28 Stufen
@@ -36,4 +35,4 @@ Option41 = 41: Diagnoseton bei jedem erhaltenen LocoNet Befehl
 Option42 = 42: Dreifachton beim L\u00f6schen einer Lokadresse ausschalten
 Option43 = 43: Aktualisierung des Gleisstatus \u00fcber LocoNet ausschalten
 Option50 = 50: Verl\u00e4ngerte Ausschaltzeit nach Kurzschlussdetektion
-Option51 = 51: Spannungseinschaltbefehl von extern ausgeschaltet
+Option51 = 51: EXT Spannungseinschaltbefehl RESTART ausgeschaltet
