--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_es.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_es.properties
@@ -19,7 +19,6 @@ Option14 = 14: Deshabilitar purga de direcciones de locomotoras
 Option15 = 15: La purga forzar\u00e1 a la locomotora a velocidad cero
 Option17 = 17: Deshabilitados los mandos m\u00faltiples avanzados autom\u00e1ticos
 Option18 = 18: Extender la parada por cortocircuito del booster a 1/2 segundo
-Option19 = 19: Reservado
 Option20 = 20: Deshabilitar la direcci\u00f3n 0 de operaci\u00f3n anal\u00f3gica
 Option21 = 21: Valor por defecto global para nueva locomotora: FX
 Option22 = 22: Valor por defecto global para nueva locomotora: 28 pasos
@@ -34,5 +33,5 @@ Option39 = 39: Limpiar toda la memoria interna
 Option41 = 41: Pulso de diagn\u00f3stico cuando se reciba comando LocoNet
 Option42 = 42: Deshabilitar los 3 pitidos cuando se purga la direcci\u00f3n de una locomotora
 Option43 = 43: Deshabilitar la actualizaci\u00f3n del estado de la v\u00eda por LocoNet
-Option50 = 50: Tiempo de recuperaci\u00f3n de cortocircuitos del booster m\u00e1s largo
+Option50=50: Tiempo de recuperaci\u00f3n de cortocircuitos del Booster m\u00e1s largo
 Option51 = 51: No permitir reinicio del voltaje EXT
