--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_it.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DB150options_it.properties
@@ -22,7 +22,6 @@ Option14 = 14: Disabilita cancellazione indirizzo loco
 Option15 = 15: Cancellazione forzer\u00e0 loco a velocit\u00e0 zero
 Option17 = 17: Consist Automatico Advanzato disabilitato
 Option18 = 18: Estendi interruzione alim. booster per cortcirc. a 1/2 secondo
-Option19 = 19: Riservato
 Option20 = 20: Disabilita indirizzo 0 (analogico)
 Option21 = 21: Default Globale per nuova loco: FX
 Option22 = 22: Default Globale per nuova loco: 28 step
@@ -37,5 +36,5 @@ Option39 = 39: Cancella tutta la memoria inerna
 Option41 = 41: Click Diagnostica su comando LocoNet ricevuto
 Option42 = 42: Disabilita 3 beeps quando si cancella Indirizzo loco
 Option43 = 43: Disabilita Aggiornamento Stato Binari LocoNet
-Option50 = 50: Allunga tempo di ripristino booster da corto circuito
+Option50=50: Allunga tempo di ripristino Booster da corto circuito
 Option51 = 51: Non permettere RESTART da Tensione EXT
