--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS50options_ja_JP.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS50options_ja_JP.properties
@@ -11,7 +11,7 @@ MAX_OPTION = 49
 
 LabelTop = DCS50 (\u30bc\u30d5\u30a1\u30fc\u2122) \u30d7\u30ed\u30b0\u30e9\u30de\u30fc
 
-Option1 = 1: One jump port (\u901a\u5e38\u306f\uff12)
+Option1 = 1: One Jump port (t = \u901a\u5e38\u306f\uff12)
 Option2 = 2: \u30b3\u30de\u30f3\u30c9\u30b9\u30c6\u30fc\u30b7\u30e7\u30f3\u3067\u306a\u304f\u30d6\u30fc\u30b9\u30bf\u30fc/\u30b9\u30ed\u30c3\u30c8\u30eb,
 Option3 = 3: \u30d6\u30fc\u30b9\u30bf\u30fc\u306f\u30aa\u30fc\u30c8\u30ea\u30d0\u30fc\u30b9\u30e2\u30fc\u30c9
 Option5 = 5: No change allowed for throttle ID, Vmax or brake rate
@@ -30,7 +30,7 @@ Option27 = 27: Disable normal switch commands (Bushby bit)
 Option28 = 28: Disable DS54 interrogate at power on
 Option33 = 33: Restore track power to prior state at power on
 Option34 = 34: Allow track to power up to run state
-Option36 = 36: Clear all mobile decoder info and consists
-Option39 = 39: Clear all internal memory
+Option36 = 36: Clear all mobile decoder info and consists in DCS50
+Option39 = 39: Clear all internal memory states
 Option43 = 43: Disable LocoNet update of track status
 Option45 = 45: Disable reply for switch state request
