--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_de.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_de.properties
@@ -11,27 +11,28 @@ MAX_OPTION = 49
 
 LabelTop = DCS51 (Zephyr Xtra) Programmer
 
-Option1 = 1: One jump port (normally two)
-Option2 = 2: Booster/Throttle, not Command Station
-Option3 = 3: Booster is autoreversing
-Option5 = 5: No change allowed for throttle ID, Vmax or brake rate
-Option6 = 6: Function 3 is non-latching
-Option7 = 7: Blast-mode programming for sound decoders
+Option1 = 1: Ein (statt zwei) Regleranschl\u00fcsse
+Option2 = 2: Verst\u00e4rkermodus, keine Zentraleinheitsfunktion
+Option3 = 3: Verst\u00e4rker mit Kehrschleifenautomatik
+Option5 = 5: Zentraleinheitenmodus
+Option6 = 6: Funktion 3 ist nicht selbsthaltend
+Option7 = 7: H\u00f6here Leistung f\u00fcr Audiodecoder auf dem Programmiergleis
 Option10 = 10: Recall Depth 4
 Option11 = 11: Recall Depth 8
-Option13 = 13: Raise loco address purge time to 600 seconds
-Option14 = 14: Disable loco address purging
-Option15 = 15: Purge will force a loco to zero speed
-Option17 = 17: Automatic advanced consists are disabled
-Option18 = 18: Extend booster short shutdown to 1/2 second
-Option20 = 20: Disable address 0 analog operation
-Option21 = 21: Global default for new loco: FX
-Option22 = 22: Global default for new loco: 28 step
-Option23 = 23: Global default for new loco: 14 step
-Option27 = 27: Disable normal switch commands (Bushby bit)
-Option28 = 28: Disable DS54 interrogate at power on
-Option33 = 33: Restore track power to prior state at power on
-Option34 = 34: Allow track to power up to run state
-Option39 = 39: Clear all internal memory
-Option43 = 43: Disable LocoNet update of track status
-Option45 = 45: Disable reply for switch state request
+Option13 = 13: Lokadressl\u00f6schen erst nach 600 Sekunden
+Option14 = 14: Kein Lokadressl\u00f6schen
+Option15 = 15: Lokadressl\u00f6schen erst nach dem Senden eines Stillstandssignals
+Option17 = 17: Automatisches Ezeugen von Decoderbasierter Mehrlokkompositionen ausgeschaltet
+Option18 = 18: Kurzschlussdetektionszeit des Verst\u00e4rkers auf 1/2 Sekunden verl\u00e4ngert
+Option20 = 20: Analogbetriebsadresse 0 ausgeschaltet
+Option21 = 21: Vorgabewert f\u00fcr neue Lok: FX
+Option22 = 22: Vorgabewert f\u00fcr neue Lok: 28 Stufen
+Option23 = 23: Vorgabewert f\u00fcr neue Lok: 14 Stufen
+Option27 = 27: Normale Weichenschaltung ausgeschaltet (Bushby Bit)
+Option28 = 28: Abfrage der DS54 beim Aufstarten ausgeschaltet
+Option33 = 33: Nach Spannungswiederkehr Gleisspannungsmodus wiederherstellen
+Option34 = 34: Nach Spannungswiederkehr automatische Gleisspannung zulassen
+Option36 = 36: Alle Informationen von Loks und Mehrfachtraktionen l\u00f6schen
+Option39 = 39: Gesamtspeicher l\u00f6schen
+Option43 = 43: Aktualisierung des Gleisstatus \u00fcber LocoNet ausschalten
+Option45 = 45: Antworten auf Weichenpositionsanfragen ausschalten
