--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_ja_JP.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions_ja_JP.properties
@@ -35,7 +35,7 @@ Option28 = 28: \u96fb\u6e90\u6295\u5165\u6642\u306bDS54 interrogate\u3092\u7981\
 Option31 = 31: Meter route/switch output when not in trinary
 Option33 = 33: Restore track power to prior state at power on
 Option34 = 34:\u96fb\u6e90\u6295\u5165\u6642\u306b\u7dda\u8def\u96fb\u6e90\u3082\u8d70\u884c\u72b6\u614b\u306b\u3059\u308b\u3002
-Option36 = 36: Clear all mobile decoder info and consists
+Option36 = 36: Clear all mobile decoder info and consists in CS
 Option37 = 37:\u3059\u3079\u3066\u306e\u30eb\u30fc\u30c8\u3092\u6d88\u53bb\u3059\u308b
 Option38 = 38:\u8eca\u4e21\u306e\u30ed\u30fc\u30b9\u30bf\u30fc\u3092\u521d\u671f\u5316\u3059\u308b
 Option39 = 39:\u3059\u3079\u3066\u306e\u5185\u90e8\u30e1\u30e2\u30ea\u30fc\u3092\u521d\u671f\u5316\u3059\u308b
