Add Dutch props for all command stations, add German for DSC210 Add tooltip for FX setting on OpSw 21-23

--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS200options_de.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS200options_de.properties
@@ -10,7 +10,7 @@ MIN_OPTION = 1
 # MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
 MAX_OPTION = 49
 
-LabelTop = DCS200 (Chief) Konfigurator
+LabelTop = DCS200 Konfigurator
 
 Option2 = 2: Verst\u00e4rkermodus, keine Zentraleinheitsfunktion
 Option3 = 3: Verst\u00e4rker mit Kehrschleifenautomatik
