--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_de.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/DCS51options_de.properties
@@ -17,8 +17,8 @@ Option3 = 3: Verst\u00e4rker mit Kehrschleifenautomatik
 Option5 = 5: Zentraleinheitenmodus
 Option6 = 6: Funktion 3 ist nicht selbsthaltend
 Option7 = 7: H\u00f6here Leistung f\u00fcr Audiodecoder auf dem Programmiergleis
-Option10 = 10: Recall Depth 4
-Option11 = 11: Recall Depth 8
+Option10 = 10: Recall Tiefe 4
+Option11 = 11: Recall Tiefe 8
 Option13 = 13: Lokadressl\u00f6schen erst nach 600 Sekunden
 Option14 = 14: Kein Lokadressl\u00f6schen
 Option15 = 15: Lokadressl\u00f6schen erst nach dem Senden eines Stillstandssignals
