--- a/java/src/jmri/jmrix/loconet/LocoNetBundle_fr.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle_fr.properties
@@ -49,4 +49,4 @@ LabelC = C
 LabelT = T
 CheckBoxReserved = Montrer les commutateurs d'options r\u00e9serv\u00e9es
 Reserved = R\u00e9serv\u00e9
-HeadingText = Les \u00e9l\u00e9ments d\u00e9crivent l'effet sur le syst\u00e8me en position "ferm\u00e9"
+HeadingText = Les \u00e9l\u00e9ments d\u00e9crivent l'effet sur le syst\u00e8me en position "ferm\u00e9" (= C)
