--- a/java/src/jmri/jmrix/loconet/LocoNetBundle_de.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle_de.properties
@@ -66,4 +66,10 @@ LabelC = G
 LabelT = A
 CheckBoxReserved = Zeige reservierte Optionen
 Reserved = Reserviert
-HeadingText = Optionen zeigen Wirkung wenn "G"eschlossen
+HeadingText = Optionen zeigen Wirkung wenn "G"erade (closed)
+CmdStnConfigFxToolTip = <html><table><tr>sw21-sw22-sw23 Konfiguration<td></td>f\u00fcr:<td></td></tr>\
+  <tr>t-t-t<td></td><td>128 Geschw.Stufen</td></tr>\
+  <tr>t-t-c<td></td><td>128 FX Modus</td></tr>\
+  <tr>c-t-t<td></td><td>14 Geschw.Stufen</td></tr>\
+  <tr>c-c-t<td></td><td>28 Geschw.Stufen</td></tr>\
+  </table></html>
