show custom DB150 tooltip prevent Intellibox resource error

--- a/java/src/jmri/jmrix/loconet/LocoNetBundle_de.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle_de.properties
@@ -67,7 +67,7 @@ LabelT = A
 CheckBoxReserved = Zeige reservierte Optionen
 Reserved = Reserviert
 HeadingText = Optionen zeigen Wirkung wenn "G"erade (closed)
-CmdStnConfigFxToolTip = <html><table><tr>sw21-sw22-sw23 Konfiguration<td></td>f\u00fcr:<td></td></tr>\
+CmdStnConfigFxToolTip = <html><table><tr>sw21-22-23 Konfiguration<td></td>f\u00fcr:<td></td></tr>\
   <tr>t-t-t<td></td><td>128 Geschw.Stufen</td></tr>\
   <tr>t-t-c<td></td><td>128 FX Modus</td></tr>\
   <tr>c-t-t<td></td><td>14 Geschw.Stufen</td></tr>\
