--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_nl.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_nl.properties
@@ -1,6 +1,6 @@
 # Intelliboxoptions_nl.properties
 #
-# Dutch command station options for the Intellibox.
+# Dutch command station options for the Intellibox-I and -II.
 # These were actually taken from the DCS100, and it's
 # not at all clear what if anything should be here.
 
