--- a/java/src/jmri/jmrix/loconet/LocoNetBundle_nl.properties
+++ b/java/src/jmri/jmrix/loconet/LocoNetBundle_nl.properties
@@ -89,7 +89,7 @@ LabelT                      = A
 CheckBoxReserved            = Toon ook gereserveerde opties
 Reserved                    = Gereserveerd
 HeadingText                 = Opties beschrijven de toestand bij "R"echtdoor (Closed)
-CmdStnConfigFxToolTip = <html><table><tr>stel sw21-sw22-sw23 in<td></td>voor:<td></td></tr>\
+CmdStnConfigFxToolTip = <html><table><tr>stel sw21-22-23 in als<td></td>voor:<td></td></tr>\
   <tr>t-t-t<td></td><td>128 staps modus</td></tr>\
   <tr>t-t-c<td></td><td>128 staps FX modus</td></tr>\
   <tr>c-t-t<td></td><td>14 staps modus</td></tr>\
