--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_da.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_da.properties
@@ -1,6 +1,6 @@
 # Intelliboxoptions_da.properties
 #
-# Danish command station options for the Intellibox.
+# Danish command station options for the Intellibox-I and -II.
 # These were actually taken from the DCS100, and it's
 # not at all clear what if anything should be here.
 
