--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_de.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_de.properties
@@ -1,6 +1,6 @@
 # Intelliboxoptions_de.properties
 #
-# German command station options for the Intellibox.
+# German command station options for the Intellibox-I and -II.
 # These were actually taken from the DCS100, and it's
 # not at all clear what if anything should be here.
 # Translation by Simon Ginsburg
