--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_it.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_it.properties
@@ -1,6 +1,6 @@
 # Intelliboxoptions_it.properties
 #
-# Italian command station options for the Intellibox.
+# Italian command station options for the Intellibox-I and -II.
 # These were actually taken from the DCS100, and it's
 # not at all clear what if anything should be here.
 # Translation: Enzo Fortuna (babbo_enzo@yahoo.com )
