--- a/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_ja_JP.properties
+++ b/java/src/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions_ja_JP.properties
@@ -1,6 +1,6 @@
 # Intelliboxoptions_ja_JP.properties
 #
-# Japanese command station options for the Intellibox.
+# Japanese command station options for the Intellibox-I and -II.
 # These were actually taken from the DCS100, and it's
 # not at all clear what if anything should be here.
 # Translated by Sakae Akanuma <sakaeakanuma@gmail.com>
