Fix _nl and _de conflicts with master

--- a/java/src/jmri/jmrit/entryexit/Bundle_de.properties
+++ b/java/src/jmri/jmrit/entryexit/Bundle_de.properties
@@ -1,6 +1,6 @@
 # Merged properties for the jmri.jmrit.signalling package
 
-# Properties for jmri.jmrit.signalling GUI elements
+# German properties for jmri.jmrit.signalling GUI elements
 # Original file:  SignallingBundle_de.properties
 # New entries are comments (#+) and contain the English text
 
@@ -72,7 +72,7 @@ SetTurnoutsOnly = Nur Weichen stellen
 SetTurnoutsAndSignalMasts = Weichen und Signalmasten stellen
 FullInterlock = Komplette Verriegelung
 NXType = NX Typ
-#+ DiscoverEntryExitPairs = Discover Entry Exit Pairs
+DiscoverEntryExitPairs = Entdecke Eintritts-/Ausgangspunkte
 DiscoveringEntryExitPairs = Eintritts-/Ausgangspunkte suchen...
 AutoGenComplete = Autom. Eintritts-/Ausgangspunkte fertig
 
@@ -86,12 +86,12 @@ ColumnFrom = Eingang
 ColumnTo = Ausfahrt
 ColumnBoth = Zweiweg
 DispatcherInt = Zusammenarbeit mit Leitstelle
-WindowTitleStackRoutes = Aufgestapelte Routenstrecken
+WindowTitleStackRoutes = Aufgestapelte Fahrstra\u00dfen
 
-#+ PromptUser = Prompt User
-#+ ClearRoute = Clear Route
-#+ CancelRoute = Cancel Route
-#+ StackRoute = Stack Route
+PromptUser = Frage mich
+ClearRoute = Strecke freigeben
+CancelRoute = Strecke abbrechen
+StackRoute = Strecke aufstapeln
 
 # colors use jmrit.Bundle
 
@@ -111,17 +111,18 @@ UpdateLogic = Signalmast {0} wurde ersetzt von Mast {1}.\nAlle Logik welche dami
 #
 # German properties for the jmri.jmrit.signalling.entryexit GUI elements
 
-MenuItemClearRoute=Gebe Routenstrecke frei
-MenuItemCancelRoute=Annuliere Routenstrecke
-MenuItemLockManualRoute=Verriegle handm\u00e4\u00dfiger Routenstrecke
+MenuEntryExit = Eintritts-/Ausgangspunkte (NX)
+MenuItemClearRoute=Gebe Fahrstra\u00dfe frei
+MenuItemCancelRoute=Annuliere Fahrstra\u00dfe
+MenuItemLockManualRoute=Verriegle handm\u00e4\u00dfiger Fahrstra\u00dfe
 
 BeanNameDestination=NX Zielpunkt
-StackRouteAsk = Willst du die Routenstrecke aufstapeln?
-RouteNotClear = Routenstrecke nicht Frei
-Error1 = Nichts war selektiert in der Liste.\nMache auswahl und klicke {0} oder lass aufgestapelt.
+StackRouteAsk = Willst du die Fahrstra\u00dfen aufstapeln?
+RouteNotClear = Fahrstra\u00dfe nicht Frei
+Error1 = Keine Auswahl in der Liste.\nMache auswahl und klicke {0} oder lass aufgestapelt.
 
-#+ Stack = Stack
-#+ ClearDown = Clear Down
-#+ Exit = Exit
-#+ InterlockPrompt = What would you like to do with this interlock?
-#+ Interlock = Interlock
+Stack = Aufstapeln
+ClearDown = Ab hier freigeben
+Exit = Verlasse
+InterlockPrompt = Was soll mit dieser Verriegelung geschehen?
+Interlock = Fahrstra\u00dfenverriegelung
