--- a/java/src/jmri/jmrit/entryexit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/entryexit/Bundle_nl.properties
@@ -1,6 +1,6 @@
 # Merged properties for the jmri.jmrit.signalling package
 
-# Properties for jmri.jmrit.signalling GUI elements
+# Dutch properties for jmri.jmrit.signalling GUI elements
 # Original file:  SignallingBundle_nl.properties
 # New entries are comments (#+) and contain the English text
 
@@ -73,7 +73,7 @@ SetTurnoutsOnly = Alleen Wissels bedienen
 SetTurnoutsAndSignalMasts = Wissels en Seinmasten bedienen
 FullInterlock = Rijwegbeveiliging
 NXType = NX Type
-#+ DiscoverEntryExitPairs = Discover Entry Exit Pairs
+DiscoverEntryExitPairs = Zoek naar In-/Uitrijpunten
 DiscoveringEntryExitPairs = Zoek In-/Uitrijpunten...
 AutoGenComplete = Autom. In-/Uitrijpunten voltooid
 
@@ -87,12 +87,12 @@ ColumnFrom = Inrit
 ColumnTo = Uitrit
 ColumnBoth = 2-Richting
 DispatcherInt = Integreer met Verkeersleiding
-WindowTitleStackRoutes = Gestapelde paden
+WindowTitleStackRoutes = Rijwegen in Wachtrij
 
-#+ PromptUser = Prompt User
-#+ ClearRoute = Clear Route
-#+ CancelRoute = Cancel Route
-#+ StackRoute = Stack Route
+PromptUser = Vraag mij
+ClearRoute = Geef Route vrij
+CancelRoute = Annuleer Route
+StackRoute = Stapel Route
 
 # colors use jmrit.Bundle
 
@@ -107,3 +107,23 @@ SwapLogic = Seinmasten {0} en {1}\nzijn omgewisseld.\nAlle logica hierop bijwerk
 RemoveLogic = Seinmast {0} is verwijderd.\nDe logica wissen die er aan was gekoppeld?
 RemoveAlreadyAssignedLogic = Seinmast {0} is al gekoppeld aan logica.\nDie bestaande logica wissen?
 UpdateLogic = Seinmast {0} is vervangen door {1}.\nAlle logica hierop bijwerken?
+
+# Bundle_nl.properties
+#
+# Dutch properties for the jmri.jmrit.signalling.entryexit GUI elements
+
+MenuEntryExit = In-/Uitrijpunten (NX)
+MenuItemClearRoute = Geef Rijweg vrij
+MenuItemCancelRoute = Annuleer Rijweg
+MenuItemLockManualRoute = Reserveer handmatige Rijweg
+
+BeanNameDestination = NX Eindpunt
+StackRouteAsk = Rijweg in de wachtrij zetten?
+RouteNotClear = Rijweg niet vrij
+Error1 = Er was geen selectie in de lijst.\nMaak een keuze en klik op {0} of laat in Wachtrij staan.
+
+Stack = In Wachtrij
+ClearDown = Vanaf hier vrijgeven
+Exit = Verlaat
+InterlockPrompt = Wat moet er met de Rijwegbeveiliging gebeuren?
+Interlock = Rijwegbeveiliging
